--- a/chicago-houseprice-pradict.ipynb
+++ b/chicago-houseprice-pradict.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/PkVUrdQk3gtf4BJ+VSba",
+      "authorship_tag": "ABX9TyMk2kf18/PwAq+3kczZAgSa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sQL5-p_F6aik",
-        "outputId": "b232d7f2-846a-4da8-a379-91e807c7dd41"
+        "outputId": "c6ea8aeb-7fac-4656-ce2d-cf3bc0777bcf"
       },
-      "execution_count": 103,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,13 +97,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 122,
       "metadata": {
         "id": "ZTE10lxqwRW9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "48d04de6-def9-4d21-ca7a-9d6a47e7d4a4"
+        "outputId": "3961fe60-6563-4f72-8862-43ef9c0eca8c"
       },
       "outputs": [
         {
@@ -152,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gbjh91qLzvf3",
-        "outputId": "b21e1bca-9baa-4dfd-89e9-bb8093332585"
+        "outputId": "16bc7ba7-7a8b-4569-c86d-dcf9769fe7c7"
       },
-      "execution_count": 105,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,9 +189,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQZc6LwN0oiQ",
-        "outputId": "01ec7c5f-5342-4c9b-bd8d-0400cae5d761"
+        "outputId": "f8166fd2-137e-4262-96cb-186134eeb9b7"
       },
-      "execution_count": 114,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,28 +244,55 @@
     {
       "cell_type": "code",
       "source": [
-        "test = x_test.iloc[[0]]\n",
-        "actual = y_test.iloc[0]\n",
-        "predicted = model.predictt(test)[0]\n",
+        "predicted = model.predict(x_test)\n",
         "\n",
-        "print(f\"實際房價: {actual}\")\n",
-        "print(f\"預測房價: {predicted:.2f}\")"
+        "df = pd.DataFrame(\n",
+        "    {'實際房價': y_test, '預測房價': predicted}\n",
+        ")\n",
+        "df['預測房價'] = df['預測房價'].map(lambda x: f\"{x:.1f}\")\n",
+        "\n",
+        "print(df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3y8p3P4-Dup8",
-        "outputId": "2539bc95-ea74-4254-a4ba-9925b25f8b74"
+        "outputId": "b4a59a7c-b7cd-4d88-91aa-2b74fec04fdc"
       },
-      "execution_count": 113,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "實際房價: 45.0\n",
-            "預測房價: 40.19\n"
+            "     實際房價  預測房價\n",
+            "63   45.0  40.2\n",
+            "45   35.0  45.4\n",
+            "23   46.0  56.3\n",
+            "36   88.0  82.8\n",
+            "113  81.0  75.6\n",
+            "64   47.0  41.7\n",
+            "81   55.0  60.1\n",
+            "119  63.0  47.0\n",
+            "94   62.0  55.6\n",
+            "30   62.0  66.7\n",
+            "108  63.0  67.2\n",
+            "31   46.0  57.0\n",
+            "74   43.0  43.6\n",
+            "4    64.0  66.3\n",
+            "110  49.0  55.5\n",
+            "133  55.0  60.0\n",
+            "41   61.0  47.6\n",
+            "93   59.0  45.7\n",
+            "153  43.0  55.2\n",
+            "98   36.0  42.2\n",
+            "22   46.0  45.7\n",
+            "12   47.0  43.5\n",
+            "140  88.0  85.5\n",
+            "13   49.0  48.5\n",
+            "120  65.0  57.8\n",
+            "51   66.0  60.4\n"
           ]
         }
       ]
