--- a/chicago-houseprice-pradict.ipynb
+++ b/chicago-houseprice-pradict.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMk2kf18/PwAq+3kczZAgSa",
+      "authorship_tag": "ABX9TyPeFwvr8W6uAdjyDyPQd8p1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,6 +175,7 @@
         "\n",
         "for feature in features:\n",
         "    isNaN = data[f'{feature}'].isnull().sum()\n",
+        "    # print(isNaN)\n",
         "    assert not isNaN, f\"{feature}欄位有空值(NaN)\"\n",
         "\n",
         "model.fit(x_train, y_train)\n",
@@ -189,9 +190,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQZc6LwN0oiQ",
-        "outputId": "f8166fd2-137e-4262-96cb-186134eeb9b7"
+        "outputId": "66354baf-7d7c-490b-a5b2-2afd176bee31"
       },
-      "execution_count": 127,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
