--- a/chicago-houseprice-pradict.ipynb
+++ b/chicago-houseprice-pradict.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPeFwvr8W6uAdjyDyPQd8p1",
+      "authorship_tag": "ABX9TyPc09Hm6us7csKcT1Ah66TQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,9 +227,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yVYTuzSw4QLi",
-        "outputId": "87a394af-4530-4608-e474-c13d2e096215"
+        "outputId": "348d73c3-0f5f-4e27-bac4-5bb3f6a21701"
       },
-      "execution_count": 111,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,10 +245,8 @@
     {
       "cell_type": "code",
       "source": [
-        "predicted = model.predict(x_test)\n",
-        "\n",
         "df = pd.DataFrame(\n",
-        "    {'實際房價': y_test, '預測房價': predicted}\n",
+        "    {'實際房價': y_test, '預測房價': y_pred}\n",
         ")\n",
         "df['預測房價'] = df['預測房價'].map(lambda x: f\"{x:.1f}\")\n",
         "\n",
@@ -259,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3y8p3P4-Dup8",
-        "outputId": "b4a59a7c-b7cd-4d88-91aa-2b74fec04fdc"
+        "outputId": "7556e74b-cf63-4866-e756-a493070aac52"
       },
-      "execution_count": 145,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
