--- a/chicago-houseprice-pradict.ipynb
+++ b/chicago-houseprice-pradict.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPc09Hm6us7csKcT1Ah66TQ",
+      "authorship_tag": "ABX9TyMMdDRba3JA3cwKqDm7674f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,15 +34,15 @@
       "source": [
         "## 芝加哥房價預測\n",
         "訓練資料來源: https://www.kaggle.com/datasets/tawfikelmetwally/chicago-house-price/data\n",
-        "- Price : price of house\n",
-        "- Bedroom: number of bedrooms\n",
-        "- Room: number of rooms\n",
-        "- Space : size of house (in square - feet)\n",
-        "- Lot : width of a lot\n",
-        "- Tax : amount of annual tax\n",
-        "- Bathroom : number of bathrooms\n",
-        "- Garage : number of garage\n",
-        "- Condition: condition of house (1 if good , 0 otherwise)"
+        "- Price(房價): price of house\n",
+        "- Bedroom(臥室數): number of bedrooms\n",
+        "- Room(房間數量): number of rooms\n",
+        "- Space(房子大小): size of house (in square - feet)\n",
+        "- Lot(地段寬度): width of a lot\n",
+        "- Tax(年度稅額): amount of annual tax\n",
+        "- Bathroom(浴室數量): number of bathrooms\n",
+        "- Garage(車庫數量): number of garage\n",
+        "- Condition(房子評價): condition of house (1 if good , 0 otherwise)"
       ],
       "metadata": {
         "id": "4TR-qqNEH0-r"
