--- a/chicago-houseprice-pradict.ipynb
+++ b/chicago-houseprice-pradict.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNpUxRkzc8AC2y28YTiNQdJ",
+      "authorship_tag": "ABX9TyPWHbTfhCgsE5iOH+Kf9d6j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,13 +26,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cheng1610/houseprice-pradict/blob/main/chicago_houseprice_pradict.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cheng1610/houseprice-pradict/blob/main/chicago-houseprice-pradict.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 芝加哥郊區房價預測\n",
+        "## 芝加哥房價預測\n",
         "訓練資料來源: https://www.kaggle.com/datasets/tawfikelmetwally/chicago-house-price/data\n",
         "- Price(房價): price of house\n",
         "- Bedroom(臥室數): number of bedrooms\n",
@@ -218,9 +218,9 @@
         "mse = mean_squared_error(y_test, y_pred)\n",
         "r2 = r2_score(y_test, y_pred)\n",
         "\n",
-        "print(f\"MSE: {mse:.2f}\")\n",
-        "print(f\"RMSE: {mse**0.5:.2f}\")\n",
-        "print(f\"R-squared: {r2:.3f}\")"
+        "print(f\"MSE(均方誤差): {mse:.2f}\")\n",
+        "print(f\"RMSE(均方根誤差): {mse**0.5:.2f}\")\n",
+        "print(f\"R-squared(決定係數): {r2:.3f}\")"
       ],
       "metadata": {
         "colab": {
