--- a/chicago-houseprice-pradict.ipynb
+++ b/chicago-houseprice-pradict.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPWHbTfhCgsE5iOH+Kf9d6j",
+      "mount_file_id": "1Q0cgLBxOewb55xlM8yFEpzCKbpoh46XG",
+      "authorship_tag": "ABX9TyN10tWsOIF+/Rg6+WC6JDSr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sQL5-p_F6aik",
-        "outputId": "c6ea8aeb-7fac-4656-ce2d-cf3bc0777bcf"
+        "outputId": "0e6ec546-4556-4849-adcc-6d7c3c87ae69"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,13 +97,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ZTE10lxqwRW9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3961fe60-6563-4f72-8862-43ef9c0eca8c"
+        "outputId": "9aea58e6-0f03-4b38-a268-579e6cd68a1a"
       },
       "outputs": [
         {
@@ -152,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gbjh91qLzvf3",
-        "outputId": "16bc7ba7-7a8b-4569-c86d-dcf9769fe7c7"
+        "outputId": "df3e849a-60df-4915-bed0-00f5e1fb6229"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,9 +190,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQZc6LwN0oiQ",
-        "outputId": "66354baf-7d7c-490b-a5b2-2afd176bee31"
+        "outputId": "3942011c-7ce2-4937-f81a-d0577f1d65ba"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,17 +227,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yVYTuzSw4QLi",
-        "outputId": "348d73c3-0f5f-4e27-bac4-5bb3f6a21701"
+        "outputId": "633c035c-8213-472f-8acb-abdfc38e8251"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MSE: 58.51\n",
-            "RMSE: 7.65\n",
-            "R-squared: 0.695\n"
+            "MSE(均方誤差): 58.51\n",
+            "RMSE(均方根誤差): 7.65\n",
+            "R-squared(決定係數): 0.695\n"
           ]
         }
       ]
@@ -257,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3y8p3P4-Dup8",
-        "outputId": "7556e74b-cf63-4866-e756-a493070aac52"
+        "outputId": "78f791cd-50fc-4aa7-f618-89faf7a42710"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
